--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "Training repository about Data Structures and Algorithms",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack --mode development ./src/index.js --watch",
-    "build": "webpack --mode production ./src/index.js"
+    "dev": "webpack --mode development src/index.ts --watch",
+    "build": "webpack --mode production src/index.ts"
   },
   "author": "psiniy-programmer",
   "license": "ISC",
   "devDependencies": {
-    "webpack": "^4.44.2",
+    "ts-loader": "^9.2.6",
+    "typescript": "^4.4.3",
+    "webpack": "^5.57.1",
     "webpack-cli": "^3.3.12"
   }
 }
