--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack --mode development src/index.ts --watch",
-    "build": "webpack --mode production src/index.ts"
+    "build": "webpack --mode production src/index.ts",
+    "test": "mocha"
   },
   "author": "psiniy-programmer",
   "license": "ISC",
@@ -14,5 +15,8 @@
     "typescript": "^4.4.3",
     "webpack": "^5.57.1",
     "webpack-cli": "^3.3.12"
+  },
+  "dependencies": {
+    "mocha": "^9.1.2"
   }
 }
